// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Types 'let' From 'new' 1`] = `
Object {
  "identifier": "myNull",
  "kind": "let",
  "value": Object {
    "kind": "literal",
    "type": "null",
    "value": null,
  },
}
`;

exports[`Types 'let' From int literal 1`] = `
Object {
  "kind": "assign",
  "left": Object {
    "kind": "identifier",
    "name": "myStr",
  },
  "operator": "=",
  "right": Object {
    "kind": "literal",
    "type": "str",
    "value": "world",
  },
}
`;

exports[`Types 'let' From obj literal 1`] = `
Object {
  "kind": "identifier",
  "name": "myNull",
}
`;

exports[`Types 'name' fn type 1`] = `
Object {
  "kind": "assign",
  "left": Object {
    "kind": "identifier",
    "name": "myFloat",
  },
  "operator": "=",
  "right": Object {
    "kind": "literal",
    "type": "float",
    "value": 2.71828183,
  },
}
`;

exports[`Types 'name' int primitive 1`] = `
Object {
  "identifier": "myFloat",
  "kind": "let",
  "value": Object {
    "kind": "literal",
    "type": "float",
    "value": 3.14159,
  },
}
`;

exports[`Types 'name' obj type 1`] = `
Object {
  "identifier": "myStr",
  "kind": "let",
  "value": Object {
    "kind": "literal",
    "type": "str",
    "value": "hello",
  },
}
`;

exports[`Types 'new' float 1`] = `
Object {
  "kind": "assign",
  "left": Object {
    "kind": "identifier",
    "name": "myBool",
  },
  "operator": "=",
  "right": Object {
    "kind": "literal",
    "type": "bool",
    "value": true,
  },
}
`;

exports[`Types 'new' int 1`] = `
Object {
  "identifier": "myBool",
  "kind": "let",
  "value": Object {
    "kind": "literal",
    "type": "bool",
    "value": false,
  },
}
`;

exports[`Types 'new' null 1`] = `
Object {
  "kind": "assign",
  "left": Object {
    "kind": "identifier",
    "name": "myInt",
  },
  "operator": "=",
  "right": Object {
    "kind": "literal",
    "type": "int",
    "value": 3,
  },
}
`;

exports[`Types 'new' str 1`] = `
Object {
  "identifier": "myInt",
  "kind": "let",
  "value": Object {
    "kind": "literal",
    "type": "int",
    "value": 99,
  },
}
`;

exports[`Types Casting Declaration from type cast 1`] = `
Object {
  "identifier": "myNewFloat",
  "kind": "let",
  "value": Object {
    "kind": "new",
    "target": Object {
      "kind": "type",
      "origin": "builtin",
      "type": "float",
    },
  },
}
`;

exports[`Types Casting Function call with type cast 1`] = `undefined`;

exports[`Types Casting Function call without type cast 1`] = `undefined`;

exports[`Types Casting Function using user-defined type 1`] = `undefined`;

exports[`Types Casting Typeof 1`] = `
Object {
  "identifier": "myNewBool",
  "kind": "let",
  "value": Object {
    "kind": "new",
    "target": Object {
      "kind": "type",
      "origin": "builtin",
      "type": "bool",
    },
  },
}
`;

exports[`Types Casting Typeof comparison 1`] = `
Object {
  "identifier": "myNewStr",
  "kind": "let",
  "value": Object {
    "kind": "new",
    "target": Object {
      "kind": "type",
      "origin": "builtin",
      "type": "str",
    },
  },
}
`;

exports[`Types Casting Typeof comparison with nested type cast 1`] = `undefined`;

exports[`Types obj access Access 1`] = `
Object {
  "identifier": "myFn",
  "kind": "let",
  "value": Object {
    "body": Array [
      Object {
        "kind": "return",
        "value": Object {
          "kind": "literal",
          "type": "str",
          "value": "abc",
        },
      },
    ],
    "kind": "literal",
    "parameters": Array [
      Object {
        "name": "a",
        "type": Object {
          "kind": "type",
          "origin": "builtin",
          "type": "int",
        },
      },
    ],
    "returns": Object {
      "kind": "type",
      "origin": "builtin",
      "type": "str",
    },
    "type": "fn",
  },
}
`;

exports[`Types obj access Access 2`] = `
Object {
  "identifier": "myNewInt",
  "kind": "let",
  "value": Object {
    "kind": "new",
    "target": Object {
      "kind": "type",
      "origin": "builtin",
      "type": "int",
    },
  },
}
`;
